--- a/src/components/Header/head.css
+++ b/src/components/Header/head.css
@@ -1,4 +1,5 @@
 .header {
+    height: 60vh;
     padding-top: 2rem;
     background-color: rgb(24, 23, 23);
     color: white;
@@ -10,6 +11,29 @@
     flex-direction: column;
     justify-content: space-between;
     grid-column: 2/8;
+    position: relative;
+}
+.pcl {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    height: 55vh;
+    padding: 0 5rem;
+    background-color: rgb(24, 23, 23);;
+}
+.pcl h1 {
+    font-size: 7rem;
+    font-weight: 300;
+    margin-top: 5rem;
+    text-shadow: -.3rem .3rem .3rem white;
+    letter-spacing: 4rem;
+}
+.pcl p {
+    font-weight: 900;
+    letter-spacing: .2rem;
+    color: white;
+    margin-top: 1rem;
 }
 .header .slider {
     margin: 1rem;
