--- a/src/components/Header/head.css
+++ b/src/components/Header/head.css
@@ -19,7 +19,7 @@
     left: 0;
     z-index: 100;
     height: 55vh;
-    padding: 0 5rem;
+    padding-right: 8rem;
     background-color: rgb(24, 23, 23);;
 }
 .pcl h1 {
@@ -37,7 +37,7 @@
 }
 .header .slider {
     margin: 1rem;
-    width: 100%;
+    width: 90%;
     opacity: .6;
     margin-left: auto;
 }
