--- a/src/components/Products/products.css
+++ b/src/components/Products/products.css
@@ -10,3 +10,11 @@
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 2rem;
 }
+
+@media only screen and (max-width: 780px) {
+    .products .content {
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 2rem;
+    }
+    
+}
