--- a/src/components/Header/head.css
+++ b/src/components/Header/head.css
@@ -78,3 +78,11 @@
     }
     
 }
+
+@media only screen and (max-width: 480px) {
+    .products .content {
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 2rem;
+    }
+    
+}
