--- a/src/components/Products/products.css
+++ b/src/components/Products/products.css
@@ -18,3 +18,10 @@
     }
     
 }
+@media only screen and (max-width: 480px) {
+    .products .content {
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 2rem;
+    }
+    
+}
