macking buy now page responsive

--- a/src/components/Public/Buy_now/now.css
+++ b/src/components/Public/Buy_now/now.css
@@ -47,3 +47,19 @@
     color: white;
     box-shadow: 3px 5px 1rem black;
 }
+
+@media only screen and (max-width: 485px) {
+    .buy_now {
+        padding: 5rem 0;
+        display: grid;
+        background-color: rgba(36, 35, 35, 0.459);
+        grid-template-columns: minmax(2rem, 1fr) repeat(6, minmax(8rem, 14rem)) minmax(2rem, 1fr);
+    }
+    .content .form {
+        display: flex;
+        flex-direction: column;
+    }
+    .content .form input {
+        margin-bottom: 1rem;
+    }
+}
