perfecting buy now's responsiveness

--- a/src/components/Public/Buy_now/now.css
+++ b/src/components/Public/Buy_now/now.css
@@ -50,10 +50,8 @@
 
 @media only screen and (max-width: 485px) {
     .buy_now {
-        padding: 5rem 0;
-        display: grid;
-        background-color: rgba(36, 35, 35, 0.459);
-        grid-template-columns: minmax(2rem, 1fr) repeat(6, minmax(8rem, 14rem)) minmax(2rem, 1fr);
+        display: block;
+        padding: 2rem;
     }
     .content .form {
         display: flex;
