--- a/src/components/Public/ProductDetails/details.css
+++ b/src/components/Public/ProductDetails/details.css
@@ -88,4 +88,7 @@
         font-size: 3rem;
         display: inline-block;
     }
+    .product_details .bottom {
+        text-align: center;
+    }
 }
