--- a/src/components/Admin/Sell/sell.css
+++ b/src/components/Admin/Sell/sell.css
@@ -1,12 +1,24 @@
 .sell {
+    text-align: center;
+}
+.sell .fields {
     display: grid;
     grid-template-columns: repeat(2, min-content);
     grid-gap: 1rem;
     text-align: center;
+    width: 50vw;
+    margin: 3rem auto;
 }
 .sell input {
     padding: 1rem;
     height: 1rem;
-    width: 15rem;
-    font-size: 1rem;
+    width: 20rem;
+    font-size: 1.3rem;
+    outline: none;
+}
+.sell .sell {
+    padding: 1rem 2rem;
+    background-color: rgb(4, 5, 5);
+    color: white;
+    cursor: pointer;
 }
