--- a/src/components/Admin/Orders/order.css
+++ b/src/components/Admin/Orders/order.css
@@ -2,13 +2,14 @@
     padding: 5rem 0;
 }
 .order {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    justify-content: center;
     padding: 1.5rem 2rem;
     border: 1px solid rgba(124, 123, 123, 0.247);
     padding-left: .3rem;
+    grid-gap: 1.5rem;
 }
 .order p {
-
     color: white;
 }
