--- a/src/components/Public/Product/product.css
+++ b/src/components/Public/Product/product.css
@@ -4,6 +4,9 @@
     background-color: white;
     height: min-content;
 }
+.product img {
+    height: 15rem;
+}
 .product_name {
     padding: 1rem;
     font-size: 1.4rem;
