--- a/src/components/Admin/admin.css
+++ b/src/components/Admin/admin.css
@@ -19,6 +19,29 @@
     }
 }
 
+.loader {
+    opacity: 0;
+    position: fixed;
+    top: 1rem;
+    left: 40%;
+    padding: 1rem 2rem;
+    background-color: black;
+    color: white;
+    transform: translateY(-100%);
+    display: flex;
+    align-items: center;
+    box-shadow: .6rem .6rem 1rem black;
+    transition: all .5s;
+}
+.loader img {
+    width: 3rem;
+    margin-right: 1rem;
+}
+.show {
+    opacity: 1;
+    transform: none;
+}
+
 .admin {
     grid-column: 1/-1;
     animation: admin infinite 5s alternate-reverse;
