--- a/src/app.css
+++ b/src/app.css
@@ -28,6 +28,36 @@ img {
 .App .content {
     height: 100%;
 }
+
+.loader {
+    opacity: 0;
+    position: fixed;
+    top: 1rem;
+    left: 40%;
+    padding: 1rem 2rem;
+    background-color: black;
+    color: white;
+    display: flex;
+    align-items: center;
+    transform: translateY(-100%);
+    z-index: 1000;
+    box-shadow: .6rem .6rem 1rem rgb(70, 68, 68);
+    transition: all .5s;
+}
+.sucess {
+    background-color: green;
+    font-size: 1.3rem;
+    color: white;
+}
+.loader img {
+    width: 3rem;
+    margin-right: 1rem;
+}
+.show {
+    opacity: 1;
+    transform: none;
+}
+
 button {
     outline: none;
 }
